# mlx-audio-separator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
docs/: bs-roformer-sw-optimization-program.md  release-first.md  release-notes-0.1.1.md  release-validation.md  reproducibility.md  roformer-kernel-fusion-followup.md  wave4-opt-in.md
mlx_audio_separator/: __init__.py  __main__.py  core.py  model-data.json
mlx_audio_separator/demucs_mlx/: __init__.py  __main__.py  api.py  apply_mlx.py  audio.py  metal_kernels.py  mlx_backend.py  mlx_convert.py  mlx_demucs.py  mlx_hdemucs.py  mlx_htdemucs.py  mlx_layers.py  mlx_registry.py  mlx_transformer.py  mlx_utils.py  model_converter.py  separate.py  spec_mlx.py  wiener_mlx.py
mlx_audio_separator/separator/: audio_chunking.py  common_separator.py
mlx_audio_separator/utils/: benchmark.py  cli.py  equivalence.py  performance.py
scripts/perf/: check_equivalence.py  compare_latency.py  demucs_bisect_nondeterminism.py  (+4 more)
tests/: conftest.py  test_apply_mlx_runtime.py  test_benchmark.py  test_common_separator.py  test_compare_latency.py  test_core.py  test_demucs_wiener_runtime.py  test_docs.py  test_equivalence_utils.py  test_generate_reference_manifest.py  test_loaders.py  test_mdx_vr_experimental_paths.py  test_mdxc_fast_norm_flag.py  test_mdxc_separator_runtime.py  test_mdxc_vectorized.py  test_mel_filters.py  test_metal_kernels.py  test_mlx_vs_pas_abba.py  test_mlx_vs_pas_parity.py  test_models.py  test_optimization_report_helpers.py  test_overlap_add_kernels.py  test_perf_trace.py  test_performance_params.py  test_release_readiness.py  test_roformer_fast_norm.py  test_roformer_grouped_paths.py  test_roformer_loader.py  test_spec_mlx.py  test_vr_spec_utils.py
(+36 files in other folders)
